--- a/style.css
+++ b/style.css
@@ -2,14 +2,11 @@ body{
 	width: 100%;
 	height: 100%;
 	}
-html{
-	width: 100%;
-	height: 100%;
-	}
 #map {
 	position: absolute;
 	 top:0;
  	left: 0;
  	right: 0;
  	bottom:0;
+ 	background-color: #f8f6ec;
 	}
